# Geometric-Latent-Diffusion

./: .gitattributes  .gitignore  .project.json  README.md  compute_feature_stats.py  environment.yml  eval_gld.sh  index.html  pyproject.toml  run_demo.sh  run_train.sh  script.js  style.css
configs/decoder/ViTXL/: config.json
configs/eval/: DA3_common_eval.yaml  VGGT_common_eval.yaml  demo.yaml  demo_vggt.yaml
configs/training/: DA3_cascade.yaml  DA3_level1.yaml  DA3_stage1_mae.yaml  VGGT_cascade.yaml  VGGT_level1.yaml
demo/5e040cd0758dcc96/nerfstudio/: transforms.json
model_stats/da3/: normalization_stats_level0.pt  normalization_stats_level1.pt
model_stats/vggt/: normalization_stats_level0.pt  normalization_stats_level1.pt  special_stats_level0.pt  special_stats_level1.pt
scripts/: reconstruct_npz_scene.py  run_3d_recon.sh  run_train_stage1_mae.sh
src/: eval_gld_metric.py  train_multiview_da3.py  train_stage1_mae.py
src/cut3r_data/: __init__.py
src/cut3r_data/base/: __init__.py  base_multiview_dataset.py  batched_sampler.py  easy_dataset.py
src/cut3r_data/datasets/: __init__.py  dl3dv.py  hypersim.py  realestate10k.py  (+1 more)
src/datasets/: da3_nvs_dataset.py
src/disc/: diffaug.py  dinodisc.py  gan_loss.py
src/gld.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/stage1/: __init__.py  rae_da3.py  rae_vggt.py
src/stage2/: __init__.py
src/utils/: camera_from_ray.py  config_utils.py  da3_validation.py  da3_validation_metric.py  model_utils.py  optim_utils.py  train_utils.py  wandb_utils.py
src/video/: cut3r_adapter.py  video_load.py
(+35 files in other folders)
