[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gld"
version = "0.1.0"
description = "GLD: Geometric Latent Diffusion for Multi-View Novel View Synthesis"
requires-python = ">=3.10"
dependencies = []  # managed via environment.yml

[tool.setuptools.packages.find]
where = ["src"]
